--- a/dev.vencord.Vesktop.yml
+++ b/dev.vencord.Vesktop.yml
@@ -19,6 +19,7 @@ finish-args:
   - --filesystem=xdg-videos:ro
   - --filesystem=xdg-pictures:ro
   - --filesystem=xdg-download
+  - --filesystem=xdg-run/pipewire-0
   - --own-name=org.mpris.MediaPlayer2.vesktop
   - --talk-name=org.gnome.Mutter.IdleMonitor
   - --talk-name=org.kde.StatusNotifierWatcher
